<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_fragment_search"
    tools:context=".Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:focusable="true"
            android:hint="@string/etSearch_hint"
            android:inputType="textAutoComplete"
            android:layout_gravity="bottom"
            android:nextFocusRight="@id/imgBtnLocate"
            android:nextFocusDown="@id/spinnerCategories"/>

        <ImageButton
            android:id="@+id/imgBtnLocate"
            android:layout_width="9dp"
            android:layout_height="54dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.25"
            android:backgroundTint="?attr/colorAccent"
            android:elevation="@dimen/elevation_button"
            android:scaleType="centerCrop"
            android:contentDescription="@string/contentLocate"
            android:src="@drawable/outline_location_on_black_48"
            android:nextFocusRight="@id/imgBtnSearch"
            android:nextFocusLeft="@id/etSearch"/>

        <ImageButton
            android:id="@+id/imgBtnSearch"
            android:layout_width="9dp"
            android:layout_height="54dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.25"
            android:backgroundTint="?attr/colorAccent"
            android:elevation="@dimen/elevation_button"
            android:scaleType="centerCrop"
            android:contentDescription="@string/contentSearch"
            android:src="@drawable/outline_search_black_48"
            android:nextFocusDown="@id/spinnerCategories"
            android:nextFocusLeft="@id/imgBtnLocate"/>

    </LinearLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinnerCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_button"
            android:spinnerMode="dropdown"
            android:entries="@array/place_search_categories"
            android:nextFocusUp="@id/etSearch"
            >
        </android.support.v7.widget.AppCompatSpinner>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</FrameLayout>