...

            <include layout="@layout/fragment_place_detail_nested_scrollview_content"/>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnFabShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_fab"
            android:src="@drawable/outline_share_black_48"
            app:layout_anchor="@id/appBar"
            android:contentDescription="@string/contentMakeFavorite"
            android:nextFocusDown="@id/btnFav"
            app:layout_anchorGravity="bottom|end" />

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
